# investigation-alpha

./: Boton.cpp  Boton.h  CMakeLists.txt  Grupo Alpha.md  Lampara.cpp  Lampara.h  Pricipio Aplicado  README.md  main.cpp
.run/: Unnamed.run.xml
Con  Principio de Inversion  de Dependecias/: Boton.cpp  Boton.h  Interface.cpp  Interface.h  Lampara.cpp  Lampara.h  main.cpp
Con PID 1/: CMakeLists1.txt
Con Principio de Inversion de Dependencias/: Boton.cpp  Boton.h  CMakeLists.txt  IInteruptor.cpp  IInteruptor.h  Interface.cpp  Interface.h  Lampara.cpp  Lampara.h  main.cpp
Document/: Alpha v1.00.md
Documents/: Principio de inversión de la dependencia (1).pptx  Principio de inversión de la dependencia.pptx  ReadMe.md
Sin Principio de Inversion  de Dependecias/: Boton.cpp  Boton.h  CMakeLists.txt  Lampara.cpp  Lampara.h  main.cpp
Sin Principio de Inversion  de Dependecias/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Sin Principio de Inversion de Dependencias/: Boton.cpp  Boton.h  CMakeLists.txt  Lampara.cpp  Lampara.h  main.cpp
